deploy/k8s/overlays/kind/umami/umami-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: umami-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app.kubernetes.io/component: umami-web
    app.kubernetes.io/instance: umami
    app.kubernetes.io/name: umami
    app.kubernetes.io/part-of: umami
spec:
  ingressClassName: nginx
  rules:
    - host: umami.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: umami
                port:
                  number: 3001
